<resources>
    <string name="app_name">calculadoraGridLayout</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="backapace"><![CDATA[<-]]></string>
    <string name="guion">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="barra">/</string>
    <string name="ast">*</string>
    <string name="porc">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_00">0</string>
    <string name="coma">,</string>
    <string name="igual">=</string>
</resources>