<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="6"
    android:layout_row="4"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <EditText
        android:editable="false"
        android:hint="@string/_0"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="6"
 />

    <Button
        android:text="@string/_1"
        android:layout_width="65dp"
        android:layout_column="0"
        android:layout_row="1"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_2"
        android:layout_column="1"
        android:layout_row="1"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_3"
        android:layout_column="2"
        android:layout_row="1"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/backapace"
        android:layout_column="3"
        android:layout_row="1"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/plus"
        android:layout_column="4"
        android:layout_row="1"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/guion"
        android:layout_column="5"
        android:layout_row="1"
        />




    <Button
        android:text="@string/_4"
        android:layout_width="65dp"
        android:layout_column="0"
        android:layout_row="2"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_5"
        android:layout_column="1"
        android:layout_row="2"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_6"
        android:layout_column="2"
        android:layout_row="2"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/barra"
        android:layout_column="3"
        android:layout_row="2"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/ast"
        android:layout_column="4"
        android:layout_row="2"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/porc"
        android:layout_column="5"
        android:layout_row="2"
        />


    <Button
        android:text="@string/_7"
        android:layout_width="65dp"
        android:layout_column="0"
        android:layout_row="3"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_8"
        android:layout_column="1"
        android:layout_row="3"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_9"
        android:layout_column="2"
        android:layout_row="3"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/_00"
        android:layout_column="3"
        android:layout_row="3"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/coma"
        android:layout_column="4"
        android:layout_row="3"
        />
    <Button
        android:layout_width="65dp"
        android:text="@string/igual"
        android:layout_column="5"
        android:layout_row="3"
        />

</GridLayout>